--- a/project-g1/src/pages/AddGame/AddGame.css
+++ b/project-g1/src/pages/AddGame/AddGame.css
@@ -63,7 +63,7 @@ label {
     width: 100%;
 }
 
-.genres-list {
+.genres-list, .consoles-list {
     align-content: center;
     display: flex;
     font-size: 0.8em;
@@ -79,7 +79,13 @@ label {
     flex-wrap: wrap;
 }
 
-.genre {
+.consoles-list input {
+    width: 25px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.genre, .console {
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
