--- a/project-g1/src/pages/AddGame/AddGame.css
+++ b/project-g1/src/pages/AddGame/AddGame.css
@@ -63,7 +63,7 @@ label {
     width: 100%;
 }
 
-.genres-list, .consoles-list {
+.genres-list, .consoles-list, .rating-list {
     align-content: center;
     display: flex;
     font-size: 0.8em;
@@ -85,11 +85,17 @@ label {
     flex-wrap: wrap;
 }
 
-.genre, .console {
+.rating-list input {
+    width: 25px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.genre, .console, .rating {
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
-    width: 190px;
+    width: 200px;
     padding: 10px;
     border-radius: 5px;
     justify-content: space-between;
