--- a/project-g1/src/pages/AddGame/AddGame.css
+++ b/project-g1/src/pages/AddGame/AddGame.css
@@ -111,3 +111,25 @@ label {
 .genre input:checked {
     color: #007bff;
 }
+
+/* Estilizando o componente de entrada de data */
+input[type="date"] {
+    /* Remove a seta padrão do lado direito (apenas no Firefox) */
+    appearance: none;
+    -moz-appearance: textfield;
+  
+    /* Adiciona uma borda e um preenchimento para melhorar a aparência */
+    border: 1px solid #ccc;
+    padding: 8px;
+    border-radius: 4px;
+  
+    /* Adiciona uma sombra sutil quando focado */
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  }
+  
+  /* Estilizando a borda quando o componente está focado */
+  input[type="date"]:focus {
+    outline: none;
+    border-color: #4CAF50; /* Cor verde (pode ser ajustada conforme necessário) */
+  }
+  
