--- a/project-g1/src/pages/Home/Home.css
+++ b/project-g1/src/pages/Home/Home.css
@@ -1,3 +1,14 @@
-h1 {
-    color: black;
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  background: #b8b8b8;
+  justify-content: center;
+  width: 100%;
+}
+
+/* Home.css */
+.container {
+  overflow: hidden;
+  white-space: nowrap;
 }
