--- a/project-g1/src/pages/Home/Home.css
+++ b/project-g1/src/pages/Home/Home.css
@@ -2,13 +2,8 @@
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
-  background: #b8b8b8;
   justify-content: center;
-  width: 100%;
-}
-
-/* Home.css */
-.container {
+  width: 1100px;
   overflow: hidden;
   white-space: nowrap;
 }
