--- a/project-g1/src/components/Navbar/Navbar.css
+++ b/project-g1/src/components/Navbar/Navbar.css
@@ -12,7 +12,7 @@ a {
     text-decoration: none;
 }
 
-a > h1 {
+a>h1 {
     font-family: 'Rubik Glitch', 'cursive';
     text-transform: uppercase;
     color: purple;
@@ -26,15 +26,17 @@ a > h1 {
 }
 
 .navbar ul>li {
+    border-radius: 5px;
+    background: purple;
     list-style: none;
-    /* padding: 20px; */
+    padding: 8px;
 }
 
-.navbar li>a {
+.navbar li > a {
     text-transform: uppercase;
     color: white;
 }
 
-.md-dash-admin {
-    
+.navbar ul > .md-dash-admin {
+    background: red;
 }
