--- a/project-g1/src/pages/Home/Home.css
+++ b/project-g1/src/pages/Home/Home.css
@@ -3,7 +3,9 @@
   flex-wrap: wrap;
   margin: 0 auto;
   justify-content: center;
+  align-items: center;
   width: 1100px;
   overflow: hidden;
   white-space: nowrap;
+  gap: 20px;
 }
