--- a/project-g1/src/App.css
+++ b/project-g1/src/App.css
@@ -7,5 +7,7 @@
 }
 
 body {
-    font-family: 'Roboto', sans-serif;    background: #e2e2e2;
+    font-family: 'Roboto', sans-serif;    
+    background: #e2e2e2;
+    margin-top: 85px;
 }
