--- a/project-g1/src/pages/GameDetails/GameDetails.css
+++ b/project-g1/src/pages/GameDetails/GameDetails.css
@@ -1,3 +1,24 @@
+.game-details-container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    max-width: 1200px;
+    margin: auto;
+    gap: 20px;
+}
+
+.game-details {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.game-details>img {
+    width: 400px;
+}
+
 .rating-age {
     color: white;
     background: red;
@@ -6,4 +27,36 @@
 .classification-all {
     color: white;
     background: blue;
+}
+
+.reviews-container {
+    align-items: center;
+    gap: 20px;
+    display: flex;
+    flex-direction: column;
+    background: #707070;
+    padding: 10px;
+}
+
+.reviews-container ul {
+    list-style: none;
+}
+
+.box-reviews-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+
+.box-reviews-container > form {
+    justify-content: center;
+    display: flex;
+}
+
+.box-reviews-container > form textarea {
+    padding: 10px;
+    justify-content: center;
+    display: flex;
+    font-size: 1.2em;
 }
