--- a/project-g1/src/components/FeaturedGame/FeaturedGame.css
+++ b/project-g1/src/components/FeaturedGame/FeaturedGame.css
@@ -1,3 +1,34 @@
+@media screen and (max-width: 768px) {
+    .featured-game img {
+        box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.589);
+        object-fit: cover;
+        aspect-ratio: 4/5;
+        width: 250px;
+        /* height: auto; */
+        max-width: 100%;
+        margin-bottom: 10px;
+    }
+}
+
+/* MOBILES */
+@media screen and (max-width: 400px) {
+    .featured-game {
+        position: relative;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        border: 2px solid red;
+    }
+
+    .featured-game > img {
+        box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.589);
+        margin-bottom: 10px;
+    }
+    .game-display {
+        width: 200px;
+    }
+}
+
 .featured-game {
     position: relative;
     display: flex;
