--- a/project-g1/src/components/FeaturedGame/FeaturedGame.css
+++ b/project-g1/src/components/FeaturedGame/FeaturedGame.css
@@ -19,14 +19,31 @@
         text-align: center;
         border: 2px solid red;
     }
-
-    .featured-game > img {
+    .featured-game img {
         box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.589);
+        object-fit: cover;
+        aspect-ratio: 4/5;
+        width: 240px;
+        /* height: auto; */
+        max-width: 100%;
         margin-bottom: 10px;
     }
     .game-display {
-        width: 160px;
+        width: 180px;
     }
+    .game-display h2 {
+        width: 100%;
+        font-size: 1em;
+    }
+    .btn-pn {
+        padding: 10px;
+        font-size: 1em;
+    }
+    /* .container-games {
+        width: 200px;
+        display: flex;
+        justify-content: space-between;
+    } */
 }
 
 .featured-game {
@@ -77,9 +94,9 @@
 }
 
 .container-games {
+    width: 100%;
     display: flex;
     justify-content: space-between;
-
 }
 
 .btn-pn {
