--- a/project-g1/src/components/GameNavigation/GameNavigation.css
+++ b/project-g1/src/components/GameNavigation/GameNavigation.css
@@ -15,6 +15,9 @@
     .game-navigation {
         max-width: 380px;
         max-height: 140px;
+        display: flex;
+        align-content: space-around;
+        /* flex-wrap: wrap; */
     }
     .game-navigation div {
         display: flex;
@@ -23,7 +26,7 @@
         max-height: 140px;
     }
 
-    .game-navigation .navigation-buttons .btn-pn {
+    .game-navigation .navigation-buttons, .btn-pn {
         padding: 10px;
         font-size: 1em;
     }
