--- a/project-g1/src/components/UserProfile/UserProfile.css
+++ b/project-g1/src/components/UserProfile/UserProfile.css
@@ -1,4 +1,14 @@
-.standard-profile {
+.profile-container {
+    display: flex;
+    width: 1100px;
+    margin: auto;
+}
+
+ul {
+    list-style: none;
+}
+
+.profile-container .standard-profile {
     max-width: 100px;
     padding: 10px;
 }
@@ -8,4 +18,25 @@
     border: 1px solid black;
     border-radius: 5px;
     width: 100%;
+}
+
+.favorites-container {
+    width: 1100px;
+    display: flex;
+    padding: 10px 0;
+}
+
+.favorites-container div ul{
+    /* width: 860px; */
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.favorites-container div ul li{
+    width: 260px;
+    flex-direction: column;
+    border: 1px solid black;
+    display: flex;
+    padding: 10px;
 }
