--- a/project-g1/src/components/Sidebar/Sidebar.css
+++ b/project-g1/src/components/Sidebar/Sidebar.css
@@ -60,6 +60,22 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5); 
+    background: rgba(0, 0, 0, 0.5);
     z-index: 1100;
-  }
+}
+
+.standard-profile-sidebar {
+    border: none;
+    display: flex;
+    width: 35px;
+    border-radius: 5px;
+    cursor: pointer;
+    justify-content: center;
+}
+
+.standard-profile-sidebar div img {
+    object-fit: cover;
+    margin: 3px;
+    max-width: 100%;
+    width: 20px;
+}
