--- a/project-g1/src/components/Sidebar/Sidebar.css
+++ b/project-g1/src/components/Sidebar/Sidebar.css
@@ -79,3 +79,12 @@
     max-width: 100%;
     width: 20px;
 }
+
+.close-button {
+    background: none;
+    border: none;
+    color: #000000;
+    font-size: 1.1rem;
+    cursor: pointer;
+    margin: 10px;
+}
