--- a/project-g1/src/components/UserProfile/UserProfile.css
+++ b/project-g1/src/components/UserProfile/UserProfile.css
@@ -33,13 +33,13 @@ ul {
     flex-wrap: wrap;
     gap: 20px;
 }
-.favorites-container div ul li{
+/* .favorites-container div ul li{
     width: 260px;
     flex-direction: column;
     border: 1px solid black;
     display: flex;
     padding: 10px;
-}
+} */
 
 .UserGameList-container div ul{
     /* width: 860px; */
@@ -48,10 +48,10 @@ ul {
     gap: 20px;
 }
 
-.UserGameList-container div ul li{
+/* .UserGameList-container div ul li{
     width: 260px;
     flex-direction: column;
     border: 1px solid black;
     display: flex;
     padding: 10px;
-}
+} */
