--- a/project-g1/src/pages/GameDetails/GameDetails.css
+++ b/project-g1/src/pages/GameDetails/GameDetails.css
@@ -39,7 +39,7 @@
 
 .details-container {
     background: #707070;
-    width: 600px;
+    width: 640px;
     height: 415px;
     display: flex;
     flex-direction: column;
@@ -62,6 +62,34 @@
     height: 400px;
 }
 
+.sites-container {
+    display: flex;
+    /* border: 1px solid black; */
+    width: 260px;
+    /* height: 190px; */
+    /* flex-wrap: nowrap; */
+    flex-direction: column;
+    /* padding: 10px; */
+    gap: 10px;
+}
+
+.sites-container ul li {
+    background: #000000;
+    /* flex-direction: column; */
+    display: flex;
+    max-width: 100%;
+    font-size: 1em;
+    flex-wrap: wrap;
+}
+
+.sites-container ul > li > a {
+    padding: 10px;
+    color: rgb(29, 121, 202);
+    display: flex;
+    /* flex-direction: column; */
+    /* padding: 10px; */
+}
+
 .description-container {
     padding: 10px;
     background: white;
@@ -70,6 +98,7 @@
 
 .description-trailer {
     display: flex;
+    justify-content: space-between;
     /* width: 820px; */
 }
 
