--- a/project-g1/src/pages/GameDetails/GameDetails.css
+++ b/project-g1/src/pages/GameDetails/GameDetails.css
@@ -1,3 +1,48 @@
+#container {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-areas:
+        "Fotodojogo Banner Status"
+        "Ondecomprar Descrição Descrição"
+        "Trailer Trailer Trailer"
+        "Analises Analises Analises"
+        "createdBy createdBy createdBy";
+    text-align: center;
+    gap: 10px;
+}
+
+#foto-do-jogo {
+    grid-area: Fotodojogo;
+}
+
+#onde-comprar {
+    grid-area: Ondecomprar;
+}
+
+#banner {
+    grid-area: Banner;
+}
+
+#status {
+    grid-area: Status;
+}
+
+#descrição {
+    grid-area: Descrição;
+}
+
+#trailer {
+    grid-area: Trailer;
+}
+
+#analises {
+    grid-area: Analises;
+}
+
+#createdBy {
+    grid-area: createdBy;
+}
+
 .game-details-container {
     display: flex;
     flex-wrap: wrap;
@@ -9,16 +54,15 @@
 
 .game-details {
     display: flex;
-    /* flex-direction: column; */
     justify-content: center;
     align-items: center;
     gap: 20px;
     justify-content: space-between;
 }
 
-.secondary-images-container {
-    z-index: -20;
+#banner, .secondary-images-container {
     position: absolute;
+    z-index: -20;
 }
 
 .secondary-images-container img {
@@ -27,14 +71,25 @@
     width: 1200px;
 }
 
-.game-details .details-div {
+#foto-do-jogo  > .details-div, 
+#onde-comprar {
     position: relative;
-    top: 200px;
+    top: 220px;
+    /* width: 280px; */
+    margin: 10px;
 }
 
-.game-details .details-div > img {
+ .details-div>img {
+    position: relative;
     width: 260px;
 }
+
+/* #onde-comprar {
+    position: relative;
+    top: 200px;
+    width: 280px;
+    margin: 10px;
+} */
 
 .game-details .rating-age {
     padding: 5px;
@@ -47,6 +102,7 @@
     color: white;
     background: green;
 }
+
 .game-details .interactions-all {
     padding: 5px;
     font-size: .9em;
@@ -56,7 +112,7 @@
 
 .details-container {
     background: #707070;
-    width: 920px;
+    width: 800px;
     height: 415px;
     display: flex;
     flex-direction: column;
@@ -80,33 +136,24 @@
 }
 
 .sites-container {
-    position: relative;
-    top: 185px;
     display: flex;
-    /* border: 1px solid black; */
     width: 260px;
-    /* height: 190px; */
-    /* flex-wrap: nowrap; */
     flex-direction: column;
-    /* padding: 10px; */
     gap: 10px;
 }
 
 .sites-container ul li {
     background: #000000;
-    /* flex-direction: column; */
     display: flex;
     max-width: 100%;
     font-size: 1em;
     flex-wrap: wrap;
 }
 
-.sites-container ul > li > a {
+.sites-container ul>li>a {
     padding: 10px;
     color: rgb(29, 121, 202);
     display: flex;
-    /* flex-direction: column; */
-    /* padding: 10px; */
 }
 
 .description-container {
@@ -118,7 +165,6 @@
 .description-trailer {
     display: flex;
     justify-content: space-between;
-    /* width: 820px; */
 }
 
 .reviews-container {
@@ -141,13 +187,13 @@
     gap: 20px;
 }
 
-.box-reviews-container > div {
+.box-reviews-container>div {
     justify-content: center;
     display: flex;
     flex-direction: column;
 }
 
-.box-reviews-container > div textarea {
+.box-reviews-container>div textarea {
     padding: 10px;
     justify-content: center;
     display: flex;
