--- a/project-g1/src/pages/GameDetails/GameDetails.css
+++ b/project-g1/src/pages/GameDetails/GameDetails.css
@@ -1,18 +1,25 @@
 #container {
     display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-columns: 2fr 4fr 2fr;
     grid-template-areas:
         "Fotodojogo Banner Status"
-        "Ondecomprar Descrição Descrição"
+        "Fotodojogo set-rci set-rci"
+        "Fotodojogo Descrição Descrição"
+        "details-div details-div details-div"
+        "Ondecomprar Ondecomprar Ondecomprar"
         "Trailer Trailer Trailer"
         "Analises Analises Analises"
         "createdBy createdBy createdBy";
     text-align: center;
-    gap: 10px;
+    gap: 20px;
 }
 
 #foto-do-jogo {
     grid-area: Fotodojogo;
+}
+
+#set-rci {
+    grid-area: set-rci;
 }
 
 #onde-comprar {
@@ -43,13 +50,20 @@
     grid-area: createdBy;
 }
 
-.game-details-container {
+#details-div {
+    grid-area: details-div;
+}
+
+#status {
     display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
+    justify-content: flex-end;
+    grid-area: Status;
+}
+
+.game-details-container {
     max-width: 1200px;
     margin: auto;
-    gap: 20px;
+    justify-content: center;
 }
 
 .game-details {
@@ -60,50 +74,107 @@
     justify-content: space-between;
 }
 
-#banner, .secondary-images-container {
+#details-div {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    padding: 10px;
+    background: #707070;
+    width: 1200px;
+    align-items: flex-start;
+    gap: 20px;
+    margin: auto;
+}
+
+#details-div div {
+    align-items: flex-start;
+    flex-direction: column;
+    display: flex;
+    gap: 10px;
+}
+
+#banner, .secondary-images-container{
+    display: flex;
+    margin: auto;
     position: absolute;
+    /* width: 1200px;
+    height: 415px; */
     z-index: -20;
 }
 
 .secondary-images-container img {
+    border: 4px solid black;
+    width: 1200px;
     height: 415px;
     object-fit: cover;
-    width: 1200px;
 }
 
-#foto-do-jogo  > .details-div, 
-#onde-comprar {
+#foto-do-jogo>.details-div-foto {
     position: relative;
     top: 220px;
-    /* width: 280px; */
-    margin: 10px;
-}
-
- .details-div>img {
-    position: relative;
-    width: 260px;
-}
-
-/* #onde-comprar {
-    position: relative;
-    top: 200px;
     width: 280px;
-    margin: 10px;
-} */
+    /* margin-left: 40px; */
+}
 
-.game-details .rating-age {
+.details-div-foto>img {
+    /* position: relative; */
+    width: 220px;
+}
+
+#onde-comprar {
+    display: flex;
+    flex-wrap: wrap;
+    width: 1200px;
+    margin: auto;
+    flex-direction: column;
+    background: #707070;
+    gap: 10px;
+    padding: 10px;
+}
+
+#onde-comprar .sites-container {
+    display: flex;
+}
+
+#onde-comprar .sites-container > ul {
+    gap: 10px;
+    display: flex;
+    max-width: 1200px;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+#onde-comprar .sites-container ul>li>a {
+    font-size: 1em;
+    padding: 10px;
+    background: black;
+    width: 500px;
+    color: rgb(29, 121, 202);
+    display: flex;
+}
+
+.set-rating-classification-interactions {
+    /* position: relative; */
+    /* top: 15px; */
+    width: 700px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.set-rating-classification-interactions .rating-age {
     padding: 5px;
     color: white;
     background: blue;
 }
 
-.game-details .classification-all {
+.set-rating-classification-interactions .classification-all {
     padding: 5px;
     color: white;
     background: green;
 }
 
-.game-details .interactions-all {
+.set-rating-classification-interactions .interactions-all {
     padding: 5px;
     font-size: .9em;
     color: rgb(0, 0, 0);
@@ -112,16 +183,17 @@
 
 .details-container {
     background: #707070;
-    width: 800px;
-    height: 415px;
+    width: 100%;
+    height: 200px;
     display: flex;
     flex-direction: column;
     gap: 20px;
     padding: 10px;
 }
 
-.details-container h1 {
-    margin: 10px 0;
+.description-container {
+    padding: 10px;
+    color: black;
 }
 
 .details-container .details-div {
@@ -133,38 +205,6 @@
 .games-status-details {
     display: flex;
     height: 400px;
-}
-
-.sites-container {
-    display: flex;
-    width: 260px;
-    flex-direction: column;
-    gap: 10px;
-}
-
-.sites-container ul li {
-    background: #000000;
-    display: flex;
-    max-width: 100%;
-    font-size: 1em;
-    flex-wrap: wrap;
-}
-
-.sites-container ul>li>a {
-    padding: 10px;
-    color: rgb(29, 121, 202);
-    display: flex;
-}
-
-.description-container {
-    padding: 10px;
-    background: white;
-    color: black;
-}
-
-.description-trailer {
-    display: flex;
-    justify-content: space-between;
 }
 
 .reviews-container {
