--- a/project-g1/src/pages/GameDetails/GameDetails.css
+++ b/project-g1/src/pages/GameDetails/GameDetails.css
@@ -1,13 +1,14 @@
 #container {
     display: grid;
-    grid-template-columns: 2fr 4fr 2fr;
+    grid-template-columns:  1fr 1fr;
+    grid-template-rows: 2fr 1fr 2fr;
     grid-template-areas:
-        "Fotodojogo Banner Status"
+        "Banner Banner Banner"
         "Fotodojogo set-rci set-rci"
-        "Fotodojogo Descrição Descrição"
+        "Fotodojogo Status Trailer"
+        "Descrição Descrição Descrição"
         "details-div details-div details-div"
         "Ondecomprar Ondecomprar Ondecomprar"
-        "Trailer Trailer Trailer"
         "Analises Analises Analises"
         "createdBy createdBy createdBy";
     text-align: center;
@@ -55,8 +56,10 @@
 }
 
 #status {
+    width: 100px;
     display: flex;
-    justify-content: flex-end;
+    max-height: 20px;
+    /* justify-content: flex-end; */
     grid-area: Status;
 }
 
@@ -122,7 +125,7 @@
   }
 
 #foto-do-jogo>.details-div-foto {
-    position: relative;
+    /* position: relative; */
     top: 40%;
     width: 280px;
 }
@@ -169,10 +172,11 @@
 .set-rating-classification-interactions {
     /* position: relative; */
     /* top: 15px; */
-    width: 700px;
+    width: 633px;
+    height: 30px;
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 10px;
 }
 
 .set-rating-classification-interactions .rating-age {
