--- a/project-g1/src/components/GamesStatus/GamesStatus.css
+++ b/project-g1/src/components/GamesStatus/GamesStatus.css
@@ -4,7 +4,7 @@
     color: white;
     display: flex;
     flex-direction: column;
-    height: 415px;
+    /* height: 415px; */
     width: 260px;
     gap: 10px;
     padding: 10px;
