--- a/project-g1/src/pages/GameDetails/GameDetails.css
+++ b/project-g1/src/pages/GameDetails/GameDetails.css
@@ -117,30 +117,6 @@
     justify-content: space-between;
 }
 
-/* #trailer {
-    display: flex;
-    justify-content: flex-end;
-}
-
-#details-div {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    padding: 10px;
-    background: #707070;
-    width: 1200px;
-    align-items: flex-start;
-    gap: 20px;
-    margin: auto;
-} */
-
-/* #details-div div {
-    align-items: flex-start;
-    flex-direction: column;
-    display: flex;
-    gap: 10px;
-} */
-
 #banner,
 .secondary-images-container {
     display: flex;
@@ -153,9 +129,8 @@
     width: 1200px;
     height: 415px;
     object-fit: cover;
-    border: 2px solid transparent;
-    border-image: linear-gradient(to right, rgba(255, 0, 0, 0.8), rgba(0, 0, 0, 0));
     border-image-slice: 1;
+    filter: blur(4px);
 }
 
 .secondary-images-container::after {
@@ -167,22 +142,6 @@
     height: 415px;
     background-image: linear-gradient(180deg, transparent, #1b1b1b);
 }
-
-/* #foto-do-jogo {
-    display: flex;
-} */
-
-/* 
-#set-rci, #descrição {
-    position: relative;
-    top: 80px;
-    z-index: -10;
-}
-
-#foto-do-jogo>.details-div-foto {
-    top: 80px;
-    width: 280px;
-} */
 
 .details-div-foto>img {
     object-fit: cover;
