--- a/project-g1/src/App.css
+++ b/project-g1/src/App.css
@@ -9,11 +9,20 @@
     padding: 0;
 }
 
-/* Configurações da fonte e corpo do documento */
+:root {
+    --background-light: #f5f5f5;
+    --background-dark: #333;
+}
+
 body {
-    font-family: 'Roboto', sans-serif;
-    background: #e2e2e2;
     margin-top: 100px;
+    background: var(--background-light);
+    font-family: 'Roboto', sans-serif;
+}
+
+.dark-mode .App {
+    transition: background-color 0.3s ease-in-out;
+    background: var(--background-dark);
 }
 
 /* Estilos responsivos para telas pequenas */
@@ -37,15 +46,3 @@ body {
         max-width: 220px;
     }
 }
-
-/* Estilos para o modo claro */
-/* .light-mode {
-    background-color: #fff;
-    color: #333;
-} */
-
-/* Estilos para o modo escuro */
-/* .dark-mode {
-    background-color: #333;
-    color: #fff;
-} */
