--- a/project-g1/src/components/UserProfile/UserProfile.css
+++ b/project-g1/src/components/UserProfile/UserProfile.css
@@ -24,7 +24,9 @@ ul {
 .UserGameList-container {
     width: 1100px;
     display: flex;
+    flex-direction: column;
     padding: 10px 0;
+    gap: 10px;
 }
 
 .favorites-container div ul{
