--- a/project-g1/src/pages/Home/Home.css
+++ b/project-g1/src/pages/Home/Home.css
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   flex-wrap: wrap;
-  margin: 0 auto;
+  margin: 100px auto;
   justify-content: center;
   align-items: center;
   width: 1100px;
