--- a/project-g1/src/components/UserProfile/UserProfile.css
+++ b/project-g1/src/components/UserProfile/UserProfile.css
@@ -19,10 +19,12 @@ ul {
 }
 
 .standard-profile img {
+    aspect-ratio: 4/4;
     padding: 5px;
     border: 1px solid black;
     border-radius: 5px;
-    width: 100%;
+    width: 100px;
+    object-fit: cover;
 }
 
 .favorites-container, 
