--- a/project-g1/src/components/ProgressBar/ProgressBar.css
+++ b/project-g1/src/components/ProgressBar/ProgressBar.css
@@ -1,18 +1,10 @@
-.progress-bar-container {
-    /* position: fixed; */
+.progress-bar {
+    position: fixed;
     /* top: 0; */
-    /* left: 0; */
-    width: 100%;
-    height: 20px;
-    background-color: #eee;
-    border-radius: 4px;
-    overflow: hidden;
-    z-index: 9999;
-  }
-  
-  .progress-bar {
-    height: 100%;
-    background-color: #4caf50; /* Cor da barra de progresso */
-    transition: width 0.3s ease-in-out;
+    left: 0;
+    height: 5px; /* Altura da barra de progresso */
+    background-color: #3498db; /* Cor da barra de progresso */
+    transition: width 0.3s; /* Adiciona uma transição suave à largura da barra de progresso */
+    z-index: 999;
   }
   
